front-end part dashboard done

--- a/Aaaka-plastics/menu2.html
+++ b/Aaaka-plastics/menu2.html
@@ -7,7 +7,7 @@
     <!-- Boxiocns CDN Link -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="./assets/css/menu2.css">
+     <link rel="stylesheet"href="./assets/css/menu2.css">
      <script src="./assets/js/locomotive-scroll.js"></script>
    </head>
 <body>
@@ -44,7 +44,7 @@
           <li><a class="link_name" href="#">Account</a></li>
           <li><a target="right" href="./pages/addaccount.html">Add</a></li>
           <li><a target="right" href="./pages/accountmodify.html">Modify</a></li>
-          <li><a target="right" href="./pages/accountList.html">List</a></li>
+          <li><a target="right" href="./pages/accountlist2.html">List</a></li>
         </ul>
       </li>
     
