--- a/Aaaka-plastics/index.html
+++ b/Aaaka-plastics/index.html
@@ -28,7 +28,7 @@
     <frameset rows ="100%,*">
         <frameset cols ="15%,*">
         <frame src="menu2.html" name="Left" frameborder="1">
-        <frame src="./pages/addaccount.html" name="right" frameborder="0" >
+        <frame src="./pages/add.html" name="right" frameborder="0" >
         </frameset>
         </frameset>
 </head>
