Dashboard Form side Menu and Tabel done

--- a/Aaaka-plastics/index.html
+++ b/Aaaka-plastics/index.html
@@ -27,8 +27,8 @@
     <script src="./assets/js/locomotive-scroll.js"></script>
     <frameset rows ="100%,*">
         <frameset cols ="15%,*">
-        <frame src="menu2.html" name="Left" frameborder="1">
-        <frame src="./pages/add.html" name="right" frameborder="0" >
+        <frame src="menu.html" name="Left" frameborder="1">
+        <frame src="./pages/addaccount.html" name="right" frameborder="0" >
         </frameset>
         </frameset>
 </head>
