--- a/Aaaka-plastics/pages/itemgroupmodify.html
+++ b/Aaaka-plastics/pages/itemgroupmodify.html
@@ -26,9 +26,9 @@
     
 </head>
 <body>
-    <header>
-        <h1>Item Group Modification</h1>
-    </header>
+
+        <h1 style="margin-left: 50px; margin-top: 50px; " >Item Group Modification</h1>
+
 
     <section>
         <label for="searchBar">Search Item Group:</label>
@@ -49,17 +49,17 @@
             <tr onclick="modifyItemGroup(this)">
                 <td>Group1</td>
                 <td>Y</td>
-                <td>UnderGroup1</td>
+                <td>-</td>
             </tr>
             <tr onclick="modifyItemGroup(this)">
                 <td>Group2</td>
                 <td>N</td>
-                <td>UnderGroup2</td>
+                <td>Group 1</td>
             </tr>
             <tr onclick="modifyItemGroup(this)">
                 <td>Group3</td>
                 <td>Y</td>
-                <td>UnderGroup3</td>
+                <td>-</td>
             </tr>
             <!-- Add more rows as needed -->
         </tbody>
