--- a/Aaaka-plastics/index.html
+++ b/Aaaka-plastics/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./assets/css/bootstrap.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     
-    <link rel="stylesheet" href="./assets/css/locomotive-scroll.css">
+    <!-- <link rel="stylesheet" href="./assets/css/locomotive-scroll.css"> -->
 
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -32,4 +32,7 @@
         </frameset>
         </frameset>
 </head>
-<body>
+<body> 
+    </body>
+    </html>
+    
