--- a/Aaaka-plastics/pages/accountgrouplist.html
+++ b/Aaaka-plastics/pages/accountgrouplist.html
@@ -30,12 +30,12 @@
 </head>
 
 <body>
-    <header>
-        <h1>List of Account Group</h1>
-    </header>
+    
+        <h1 style="margin-left: 50px; margin-top: 50px; ">List of Account Group</h1>
+    
 
     <section>
-        <label for="searchBar">Search Group Name:</label>
+        <label style="margin-left: 30px;" for="searchBar">Search Group Name:</label>
         <input type="text" id="searchBar" placeholder="Search" oninput="filterTable()">
     </section>
 
@@ -53,17 +53,17 @@
             <tr>
                 <td onclick="showDetails(this)">Group1</td>
                 <td>Y</td>
-                <td>UnderGroup1</td>
+                <td>-</td>
             </tr>
             <tr>
                 <td onclick="showDetails(this)">Group2</td>
-                <td>Y</td>
-                <td>UnderGroup2</td>
+                <td>N</td>
+                <td>Group 1</td>
             </tr>
             <tr>
                 <td onclick="showDetails(this)">Group3</td>
                 <td>Y</td>
-                <td>UnderGroup3</td>
+                <td>-</td>
             </tr>
             <!-- Add more rows as needed -->
         </tbody>
