--- a/Aaaka-plastics/pages/accountmodify.html
+++ b/Aaaka-plastics/pages/accountmodify.html
@@ -2,53 +2,71 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="Gor Kenil" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name=author content="Gor Kenil" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"> <!-- Include Font Awesome CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-  <title>Aaaka Plastics</title>
+    <title>Aaaka Plastics</title>
 
-  <!-- <link rel="stylesheet" href="./assets/css/bootstrap.css">
+    <link rel="stylesheet" href="./assets/css/bootstrap.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/locomotive-scroll.css"> -->
 
-  <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="./assets/css/locomotive-scroll.css">
 
-  <!-- <script src="./assets/js/locomotive-scroll.js"></script> -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="./assets/js/locomotive-scroll.js"></script>
+    <!-- Add a link to a new CSS file for account modification, if needed -->
+    <link rel="stylesheet" href="../assets/css/accountmodify.css">
 
-  <link rel="stylesheet" href="../assets/css/accountmodify.css">
+   
 </head>
 
 <body>
-  <header>
-    <h1>Account Modification</h1>
-</header>
-    <div class="search-container">
-        <input type="text" id="search" oninput="searchAccounts()" placeholder="Search accounts...">
-    </div>
+  <h1 style="margin-left: 50px; margin-top: 50px; " >
+    Account modification
+  </h1>
 
-    <div class="table-container">
-        <table id="accountTable">
-            <thead>
-                <tr>
-                    <th>List of Accounts</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Table rows will be dynamically added using JavaScript -->
-            </tbody>
-        </table>
-    </div>
+    <section>
+        <label style="margin-left: 50px;" for="searchBar">Search Account:</label>
+        <input type="text" id="searchBar" placeholder="Search" oninput="filterTable()">
+    </section>
+
+    <table id="accountTable">
+        <!-- Change the table headers -->
+        <thead>
+            <tr>
+                <th>Account Name</th>
+                <th>Primary</th>
+                <th>Under Account</th>
+            </tr>
+        </thead>
+        <!-- Your table content -->
+        <tbody>
+            <tr onclick="modifyAccount(this)">
+                <td>Account1</td>
+                <td>Y</td>
+                <td>-</td>
+            </tr>
+            <tr onclick="modifyAccount(this)">
+                <td>Account2</td>
+                <td>N</td>
+                <td>Account 1</td>
+            </tr>
+            <tr onclick="modifyAccount(this)">
+                <td>Account3</td>
+                <td>Y</td>
+                <td>-</td>
+            </tr>
+            <!-- Add more rows as needed -->
+        </tbody>
+    </table>
 
     <script src="../assets/scripts/accountModify.js"></script>
 </body>
