--- a/Aaaka-plastics/pages/itemmodify.html
+++ b/Aaaka-plastics/pages/itemmodify.html
@@ -12,7 +12,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <title>Aaaka Plastics</title>
-
+ 
     <link rel="stylesheet" href="./assets/css/bootstrap.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 
@@ -25,13 +25,14 @@
     <link rel="stylesheet" href="../assets/css/itemmodify.css">
 </head>
 <body>
-    
-    <header>
-        <h1>Item Modification</h1>
-    </header>
+
+        <h1 style="margin-left: 50px; margin-top: 50px; " >
+            Item Modification
+        </h1>
+
 
     <section>
-        <label for="searchBar">Search Item:</label>
+        <label style="margin-left: 50px;" for="searchBar">Search Item:</label>
         <input type="text" id="searchBar" placeholder="Search" oninput="filterTable()">
     </section>
 
