--- a/Aaaka-plastics/menu.html
+++ b/Aaaka-plastics/menu.html
@@ -14,8 +14,8 @@ body
     background-color: #E6F2FF;
     overflow-y: auto;
     scrollbar-width: thin; 
-  scrollbar-color: transparent transparent; 
-  scroll-behavior: smooth;
+    scrollbar-color: transparent transparent; 
+    scroll-behavior: smooth;
   
   
     
@@ -52,11 +52,11 @@ body
 
         <div class="profile">
             <div class="info">
-                <div class="img">
-                    <img src="./assets/images/kenil.png" alt="user">
+                <div class="img" >
+                    <img src="./assets/images/profilepic.webp" alt="user" width="65px" >
                 </div>
                 <div class="text">
-                    <div class="name">Kenil Gor</div>
+                    <div class="name"><small>Aaaka Plastic</small></div>
                     <div class="pos">Super User</div>
                 </div>
             </div>
