--- a/Aaaka-plastics/pages/additem.html
+++ b/Aaaka-plastics/pages/additem.html
@@ -156,8 +156,8 @@
                                 <label for="printName" class="form__label">Print Name:</label>
                             </div>
                             <div class="form__group field">
-                                <textarea class="form__field" placeholder="Item Description" name="itemDescription"
-                                    id='itemDescription'></textarea>
+                                <input class="form__field" placeholder="Item Description" name="itemDescription"
+                                    id='itemDescription'></input>
                                 <label for="itemDescription" class="form__label">Item Description</label>
                             </div>
                         </div>
@@ -172,8 +172,8 @@
                         <div class="item1" style="display: flex;">
                             <div class="form__group field">
                                 <!-- <label for="country" style="margin-bottom: 10px; display: block; color:#11998e;">Country:</label> -->
-                                <label class="select" for="slct">
-                                  <select style="background-color: #E6F2FF;" id="slct" required="required">
+                                <label class="select"  style="width: 81%;" for="slct">
+                                  <select style="background-color: #E6F2FF; padding-left: 16px;" id="slct" required="required">
                                     <option value="" disabled="disabled" selected="selected">Select Unit</option>
                                     <option value="Unit1">Unit 1</option>
                                     <option value="Unit2">Unit 2</option>
@@ -213,10 +213,10 @@
                         </div>
 
                         <div class="item1" style="display: flex;">
-                            <div class="form__group field">
+                            <div class="form__group field" >
                                 <!-- <label for="country" style="margin-bottom: 10px; display: block; color:#11998e;">Country:</label> -->
-                                <label class="select" for="slct">
-                                    <select style="background-color: #E6F2FF;" id="unit" name="unit">
+                                <label class="select"  style="width: 81%;" for="slct">
+                                    <select style="background-color: #E6F2FF; padding-left: 16px;" id="unit" name="unit">
                                         <option value="" disabled="disabled" selected="selected">Select Category</option>
                                         <option value="unit1">Unit 1</option>
                                         <option value="unit2">Unit 2</option>
