--- a/Aaaka-plastics/pages/additem.html
+++ b/Aaaka-plastics/pages/additem.html
@@ -136,7 +136,7 @@
                 <div class="row">
                     <!-- Left Column -->
                     <div class="col">
-                        <h4 style="margin-top: 1%;">Genral information</h4>
+                        <h4 style="margin-top: 1%;">General information</h4>
                         <div class="item1" style="display: flex;">
                             <div class="form__group field">
                                 <input type="text" class="form__field" placeholder="Name" name="groupName"
@@ -168,7 +168,7 @@
                             </div>
 
                         </div>
-                        <h4 style="margin-top: 4%;">Genral information</h4>
+                        <h4 style="margin-top: 4%;">Item Price information</h4>
                         <div class="item1" style="display: flex;">
                             <div class="form__group field">
                                 <!-- <label for="country" style="margin-bottom: 10px; display: block; color:#11998e;">Country:</label> -->
