--- a/Aaaka-plastics/registration_page.html
+++ b/Aaaka-plastics/registration_page.html
@@ -33,10 +33,10 @@
 			<div class="signup">
 				<form>
 					<label for="chk" aria-hidden="true">Sign up</label>
-					<input type="text" name="txt" placeholder="User name" required="">
-					<input type="email" name="email" placeholder="Email" required="">
-					<input type="password" name="pswd" placeholder="Password" required="">
-					<button>Sign up</button>
+					<input type="text" name="txt" placeholder="User name" id="uname" required="">
+					<input type="email" name="email" placeholder="Email" id="email" required="">
+					<input type="password" name="pswd" placeholder="Password" id="pswd" required="">
+					<button onclick=signUp(event)>Sign up</button>
 				</form>
 			</div>
 
